Work for #2986: fix scrollbar appear in designer (#2987)

--- a/packages/survey-creator-core/src/components/tabs/designer.scss
+++ b/packages/survey-creator-core/src/components/tabs/designer.scss
@@ -25,6 +25,7 @@ svc-tab-designer {
   .sd-container-modern {
     min-width: calcSize(70);
     width: 100%;
+    box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
     &.sd-container-modern--static {
